<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tv_resumes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resumes_list"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sp_resumes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_create_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_resume" />

    <Button
        android:id="@+id/btn_edit_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_resume" />

    <Button
        android:id="@+id/btn_remove_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_resume" />

    <Button
        android:id="@+id/btn_send_resume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_resume" />

</LinearLayout>